hw3: refactor old tests