@@ -2,78 +2,75 @@ package ru.clevertec.check.service.validator.impl;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
+import org.mockito.Mock;
+import org.mockito.Mockito;
+import org.mockito.junit.jupiter.MockitoExtension;
 import ru.clevertec.check.service.validator.AnnotationExecutor;
+import ru.clevertec.check.service.validator.FieldScanner;
 import ru.clevertec.check.service.validator.annotation.Pattern;
 import ru.clevertec.check.service.validator.exception.ValidatorException;
 
+import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
+@ExtendWith(MockitoExtension.class)
 class PatternExecutorTest {
     private AnnotationExecutor<Pattern> annotationExecutor;
+    @Mock
+    private FieldScanner fieldScanner;
 
     @BeforeEach
-    public void init() {
-        annotationExecutor = new PatternExecutor(new FieldScannerImpl());
-    }
-
-    @Test
-    public void execute_allFieldsAreValid() {
-        ExpectedObject expectedObject = new ExpectedObject("field1", "field2");
-        List<String> messages = new ArrayList<>();
-
-        annotationExecutor.execute(expectedObject, messages);
-
-        assertTrue(messages.isEmpty());
-    }
-
-    @Test
-    public void execute_allFieldNotValid() {
-        ExpectedObject expectedObject = new ExpectedObject("", "");
-        List<String> messages = new ArrayList<>();
-
-        annotationExecutor.execute(expectedObject, messages);
-
-        assertArrayEquals(new Object[]{"field1", "field2"}, messages.toArray());
+    public void setup() {
+        annotationExecutor = new PatternExecutor(fieldScanner);
     }
 
 
-    @Test
-    public void execute_oneFieldNotValid() {
-        ExpectedObject expectedObject = new ExpectedObject("", "field2");
-        List<String> messages = new ArrayList<>();
+    @ParameterizedTest
+    @MethodSource("generateTestObjectAndListFieldAndExpectedMessages")
+    void execute(TestObject testObject, List<Field> fields, List<String> expected) {
+        List<String> actual = new ArrayList<>();
+        Mockito.when(fieldScanner.findAnnotation(Pattern.class, testObject)).thenReturn(fields);
 
-        annotationExecutor.execute(expectedObject, messages);
+        annotationExecutor.execute(testObject, actual);
 
-        assertArrayEquals(new Object[]{"field1"}, messages.toArray());
-    }
-
-    @Test
-    public void execute_oneFieldIsNull() {
-        ExpectedObject expectedObject = new ExpectedObject(null, "field2");
-        List<String> messages = new ArrayList<>();
-
-        annotationExecutor.execute(expectedObject, messages);
-
-        assertArrayEquals(new Object[]{"field1"}, messages.toArray());
+        assertEquals(expected, actual);
     }
 
     @Test
     public void execute_incorrectField() {
-        assertThrows(ValidatorException.class,
-                () -> annotationExecutor.execute(new ExpectedObjectWithIncorrectField(1), Collections.emptyList())
+        TestObjectWithIncorrectField testObject = new TestObjectWithIncorrectField(1);
+        Mockito.when(fieldScanner.findAnnotation(Pattern.class, testObject))
+                .thenReturn(List.of(TestObjectWithIncorrectField.class.getDeclaredFields()));
+
+        assertThrows(ValidatorException.class, () -> annotationExecutor.execute(testObject, Collections.emptyList()));
+    }
+
+    static Stream<Arguments> generateTestObjectAndListFieldAndExpectedMessages() {
+        Class<?> testObjectClass = TestObject.class;
+        List<Field> fields = List.of(testObjectClass.getDeclaredFields());
+        return Stream.of(
+                Arguments.of(new TestObject("field1", "field2"), fields, Collections.emptyList()),
+                Arguments.of(new TestObject("", ""), fields, List.of("field1", "field2")),
+                Arguments.of(new TestObject(null, "field2"), fields, List.of("field1"))
         );
     }
 
 
-    private record ExpectedObject(@Pattern(regexp = ".+", message = "field1") String field1,
-                                  @Pattern(regexp = ".+", message = "field2") String field2) {
+    private record TestObject(@Pattern(regexp = ".+", message = "field1") String field1,
+                              @Pattern(regexp = ".+", message = "field2") String field2) {
     }
 
-    private record ExpectedObjectWithIncorrectField(@Pattern(regexp = ".+", message = "field1") int field1) {
+    private record TestObjectWithIncorrectField(@Pattern(regexp = ".+", message = "field1") int field1) {
     }
 
 }
